baml_language/crates/baml_tests/snapshots/parser_speculative/baml_tests__parser_speculative__02_parser__ambiguous_function.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "Ambiguous"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR " string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      CLIENT_FIELD "
  client GPT4"
        KW_CLIENT "client"
        WORD "GPT4"
      R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "AnotherLLM"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "input"
        TYPE_EXPR " string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string"
      WORD "string"
    LLM_FUNCTION_BODY
      L_BRACE "{"
      WORD "clent"
      WORD "GPT4"
      PROMPT_FIELD
        WORD "prompt"
        RAW_STRING_LITERAL " #"Process: {{ input }}"#"
          HASH "#"
          QUOTE """
          WORD "Process"
          COLON ":"
          L_BRACE "{"
          L_BRACE "{"
          WORD "input"
          R_BRACE "}"
          R_BRACE "}"
          QUOTE """
          HASH "#"
      R_BRACE "}"

=== ERRORS ===
Error: Expected LLM function missing 'prompt' field, found RBrace
   ╭─[ 0:5:1 ]
   │
 5 │ }
   │ ┬  
   │ ╰── Expected LLM function missing 'prompt' field, found RBrace
───╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found Word
   ╭─[ 0:9:3 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │   ──┬──  
   │     ╰──── Expected Only 'client' and 'prompt' allowed in LLM function, found 'clent', found Word
───╯

Error: Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found Word
   ╭─[ 0:9:9 ]
   │
 9 │   clent GPT4  // Typo in "client"
   │         ──┬─  
   │           ╰─── Expected Only 'client' and 'prompt' allowed in LLM function, found 'GPT4', found Word
───╯

Error: Expected LLM function missing 'client' field, found RBrace
    ╭─[ 0:11:1 ]
    │
 11 │ }
    │ ┬  
    │ ╰── Expected LLM function missing 'client' field, found RBrace
────╯
